--- a/workshops/good_data_practises.qmd
+++ b/workshops/good_data_practises.qmd
@@ -281,16 +281,11 @@ While a computer will ultimately run your code, it'll be read by humans, so writ
 
     -   R (and many other languages) names can't start with numbers
 
-    -   'car speed in miles per hour' versus 'car speed (mph)' versus **car_speed_mph**'
+    -   'car speed in miles per hour' versus 'car speed (mph)' versus **car_speed_mph**
 
 ## Naming {.smaller}
 
 -   Be aware on naming rules of programs
-    -   Avoid special characters (\$, \@, \*)
-    -   **No spaces !!**
-    -   Case-sensitive (e.g. R) versus case insensitive (SQL)
-    -   R (and many other languages) names can't start with numbers and does not like spaces
-    -   'car speed in miles per hour' versus 'car speed (mph)' versus car_speed_mph'
 -   styles
     -   camelCase
     -   PascalCase
