--- a/publications.bib
+++ b/publications.bib
@@ -184,6 +184,18 @@ abstract = {Most animal habitats are affected by humans. While some species tole
 	year = {2024},
 }
 
+@article{zembsch2005,
+    author = {Zembsch, Tela and Jansen, David and Lee, Xia and Oberle, Emily and Philip, Rosemary and Bartholomay, Lyric and Paskewitz, Susan},
+    title = {Tick spotting: using mannequins to evaluate individual efficacy at detecting Ixodes scapularis (Acari: Ixodidae)},
+    journal = {Journal of Medical Entomology},
+    pages = {tjaf053},
+    year = {2025},
+    month = {05},
+    issn = {0022-2585},
+    doi = {10.1093/jme/tjaf053},
+    url = {https://doi.org/10.1093/jme/tjaf053},
+    eprint = {https://academic.oup.com/jme/advance-article-pdf/doi/10.1093/jme/tjaf053/63227332/tjaf053.pdf},
+}
 
 @article{jansen2025,
   author = {Jansen, D. A. and Warutere, J. Kinyua and Tung, Jenny and Alberts, Susan C. and Archie, Elizabeth A.},
