--- a/presentations.qmd
+++ b/presentations.qmd
@@ -5,6 +5,8 @@ about:
   image: ./images/djansen.jpg
 ---
 
+Here are a few presentations I have given.
+
 **MCEVBD job interview**
 
 I gave this <a href="./files/MCEVBD_presentation.pdf"> presentation </a> as part of my job interview for my current job at the MCEVBD. This presentation was made with LaTeX. The raw code can be found see <a href="./files/MCEVBD_presentation_code.pdf">here</a> and downloaded [here](./files/JansenD_presentation.Rtex).
@@ -12,3 +14,41 @@ I gave this <a href="./files/MCEVBD_presentation.pdf"> presentation </a> as part
 **PhD defense talk**
 
 I gave this <a href="./files/PhD_defence_talk_29APR13.pdf"> presentation </a> as part of my PhD defense at the University of Zurich. This presentation was made with LaTeX. The raw code can be found [here](./files/PhD_defence_talk_29APR13.tex).
+
+
+
+## First author presentations
+
+**Jansen, D.**, Archie , E.A. 2022. Can we replace assigned ranks by elo-based ranks?, Joint lab meeting, Duke, USA
+
+**Jansen, D.**, Archie , E.A. 2020. Do baboon dads matter?, Joint lab meeting, Duke, USA
+
+**Jansen, D.**, Archie , E.A. 2019. Issues with SCI and DSI and the possible solution of universal slopes. Joint lab meeting, Duke, USA
+
+**Jansen, D.**, Archie , E.A. 2018. Early adversity, social connectedness, and submission indexes for juveniles. Joint lab meeting, Duke, USA
+
+**Jansen, D.**, Archie , E.A. 2015. Condition data analysis. Joint lab meeting, Duke, USA
+
+**Jansen. D.** Cant, M.A., Manser, M.B. 2013. Context-specific call sequences in the banded mongoose. (poster) ABS conference. Boulder, USA
+
+**Jansen. D.**, Cant, M.A., Manser, M.B. 2012. Temporal segregation of individual and behavioural signatures in banded mongoose (Mungos mungo) close calls. VIth ECBB. Essen, Germany
+
+**Jansen. D.** 2012. Complexity of information coding in banded mongoose vocalisations. EvoBio PhD retreat. Riederalp, Switerland
+
+**Jansen. D.** Cant, M.B., Manser, M.B. 2012. Close call transmission - a comparison between banded mongoose and meerkats. 4th annual Meerkat and Mongoose Meeting. Cambridge, UK
+
+**Jansen. D.** Cant, M.B., Manser, M.B. 2012. Temporal segregation of individual and behavioural signatures in banded mongoose close calls. . ASAB Easter meeting. Aberystwyth, UK
+
+**Jansen. D.** Cant, M.B., Manser, M.B.2012. Banded mongoose close calls encode individual- and behaviour-specific signatures. Biology 2012. Friborg, Switzerland
+
+**Jansen. D.** Cant, M.B., Manser, M.B. 2011. Banded mongoose close calls encode individual- and behaviour-specific signatures. . XXIII IBAC. La Rochelle, France
+
+**Jansen. D.** 2011. Cooperation. Conflict and Communication in Banded Mongoose. Tropical Biology Association course. Mweya, Uganda
+
+**Jansen. D.** 2010. Cooperation. Conflict and Communication in Banded Mongoose. Tropical Biology Association course. Mweya. Uganda
+
+**Jansen. D.** 2009. Vocalizations of banded mongoose. UWA research symposium. Mweya, Uganda
+
+**Jansen. D.** 2009. Banded mongoose research in Queen Elisabeth National Park. Tropical Biology Association course. Mweya, Uganda
+
+**Jansen. D.** 2008. ‘Dinner time’. - resource calls in banded mongoose. . Institute of Zoology PhD retreat. Zurich, Switzerland
